# dependabot-tracker

./: .env.template  .gitignore  Cargo.toml  README.md
data/: example_repositories.json
src/: app.rs  current_screen.rs  dependabot.rs  logging.rs  main.rs  repository.rs  repository_list.rs  ui.rs
