[package]
name = "dependabot-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
ratatui = "0.26.2"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
futures = "0.3.30"
color-eyre = "0.6.3"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.11"
dotenv = "0.15.0"
throbber-widgets-tui = "0.5.0"
tracing-error = "0.2.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
directories = "5.0.1"
lazy_static = "1.4.0"
